# chatvault

./: .env.example  .gitignore  .replit  README.md  delete.py  docker-compose.yml  import_to_db.py  main.py  parse_messages.py  pyproject.toml  requirements.txt  view_messages.py
extractors/:  __init__.py  chat_extractor.py  get_input_html.py  html_loader.py  message_extractor.py  slugify_utils.py  time_utils.py
parser/: chat_extractor.py  get_input_html.py  slugify_utils.py
storage/: __init__.py  db_pg_writer.py  db_writer.py  json_writer.py
